hphp/test/slow/using/bad-async.php.expectf

Fatal error: Function 'main' contains 'await' but is not declared as async. in %s/test/slow/using/bad-async.php on line 5
